--- a/layouts/partials/footer/custom.html
+++ b/layouts/partials/footer/custom.html
@@ -1,8 +1,8 @@
 <script>
-    // const el = document.querySelector('.powerby')
-    // console.log('el:', el)
-    // const beian = document.createElement('span')
-    // beian.style='margin-left:1rem;'
-    // beian.innerText = '备案号：苏ICP备2021052498号'
-    // el.appendChild(beian)
+    const el = document.querySelector('.powerby')
+    console.log('el:', el)
+    const beian = document.createElement('span')
+    beian.style='margin-left:1rem;'
+    beian.innerText = '备案号：苏ICP备2021052498号'
+    el.appendChild(beian)
 </script>
